--- a/todo.org
+++ b/todo.org
@@ -114,6 +114,11 @@ Concrete example: files that were read and already in context.
 **** [X] Add support for multi-blocks where multiple things are getting deleted and added.
 **** [X] Add support for multiple patch blocks or provide better instructions
 **** [X] Better error instructions when blocks overlap
+**** [ ] Fix hint for:
+Errors:
+******** tests/test_runner.py:431: Invalid patch line in tests/test_runner.py: must start with @@, -, +, or a space
+  Hint: Lines inside file sections must start with '@@', '-', '+', or a single leading space for context. Blank lines are allowed as empty context.
+
 *** [X] Fenced diff format
 *** [ ] Unified Diff format
 * [ ] Nodes
