--- a/todo.org
+++ b/todo.org
@@ -2,6 +2,7 @@
 * [ ] Cleanup and optimizations
 ** [ ] Autocompleters needs consts at model level
 * [ ] Runner
+** [ ] Emit event to UI when runner state changes: starts, stops, moves to next node, etc.
 ** [ ] Add a way to raise error and stop the runner. User should be able to try and continue the runner.
 ** [ ] Add a way to restrict number of loops when cycling
 ** [ ] Stopping executor with ctrl+c during input and then starting it with /use does not stop at input, but retries last input node - verify
