--- a/todo.org
+++ b/todo.org
@@ -1,6 +1,6 @@
 #+title: Code TODO
 * [ ] Cleanup and optimizations
-** [ ] Autocompleters needs consts at model level
+** [X] Autocompleters needs consts at model level
 * [ ] Runner
 ** [ ] Emit event to UI when runner state changes: starts, stops, moves to next node, etc.
 ** [ ] Add a way to raise error and stop the runner. User should be able to try and continue the runner.
