--- a/todo.org
+++ b/todo.org
@@ -4,12 +4,14 @@
 * [ ] Preprocessors
 ** [ ] Add user prompt preprocessor (instead of just system prompt) through configuration
 ** [ ] Add prefix variant of preprocessor to enable caching.
+** [ ] Figure out a way to print warnings or logs
 * [ ] Runner
 ** [ ] Emit event to UI when runner state changes: starts, stops, moves to next node, etc.
 ** [ ] Add a way to raise error and stop the runner. User should be able to try and continue the runner.
 ** [ ] Add a way to restrict number of loops when cycling
 ** [ ] Stopping executor with ctrl+c during input and then starting it with /use does not stop at input, but retries last input node - verify
 * [ ] Configuration
+** [ ] Add human-readable names to nodes
 ** [ ] Update templates and parametrize them via variables
 ** [ ] Figure out why confirmation override for discovery did not work
 ** [ ] Tweak architect prompts to not provide solution if there are questions to answer or user explicitly requests one shot solution
@@ -96,12 +98,7 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 *** [ ] Figure out why pricing estimates are all zeroes
 *** [ ] Add a way to append text to default system prompt
 ** [ ] Create RepoMap node - call into Know with provided prompt
-** [ ] Create documentation node - read AGENT.md files for all paths that are mentioned in previous messages.
-- Have configuration for static message text
-- Support one or more explicit paths to be read and inserted into message context
-- Append to previous message? Inject into system prompt of LLM node only?
-- How do we extract paths reliably?
-- Maybe offer a tool?
+** [X] Create documentation node - read AGENT.md files for all paths that are mentioned in previous messages.
 ** [ ] Fan-out node - call other defined tools, collect their results and pass concatenated messages to next tool
 ** [ ] TODO node - collect plan that is formatted with specific syntax (markdown? function call?)
 * [ ] Tools
