--- a/todo.org
+++ b/todo.org
@@ -31,6 +31,7 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 * [X] UI protocol
 ** [ ] Add syntax name hint to apply formatting
 * [ ] Terminal UI
+** [ ] Better visual separation of prompts vs responses
 ** [X] Node transitions are printed out of order:
 ** [X] Fix await
 ** [X] Always show prompt. Add commands to stop/continue workflows
@@ -101,18 +102,14 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 *** [ ] Add stats for the number of tokens in the context and context window limits
 *** [ ] Figure out why pricing estimates are all zeroes
 *** [X] Add a way to append text to default system prompt
-*** [ ] Fix hallucinated tool calls and immediately return an error:
-| vectorops_read_-files(...)
-{
-  "path": "src/vocode/ui/proto.py"
-}
+*** [X] Fix hallucinated tool calls and immediately return an error:
 ** [ ] Create RepoMap node - call into Know with provided prompt
 ** [X] Create documentation node - read AGENT.md files for all paths that are mentioned in previous messages.
 ** [ ] Fan-out node - call other defined tools, collect their results and pass concatenated messages to next tool
 ** [ ] TODO node - collect plan that is formatted with specific syntax (markdown? function call?)
 * [ ] Tools
 ** [ ] Integrate Know
-*** [ ] Add progress report
+*** [X] Add progress report
 *** [ ] Figure out how to express 3rd party dependencies and give access
 *** [ ] Disable warnings
 ** [ ] Add pattern matching rules to auto-approve rule calls
