--- a/todo.org
+++ b/todo.org
@@ -8,25 +8,29 @@
 ** [ ] Tools
 ** [ ] Know
 ** [ ] Preprocessors
-** [X] Hacking
+** [ ] Hacking
 * [ ] Preprocessors
-** [X] Add user prompt preprocessor (instead of just system prompt) through configuration
-** [X] Add prefix variant of preprocessor to enable caching.
 ** [ ] Figure out a way to print warnings or logs
 * [ ] Runner
-** [X] Emit event to UI when runner state changes: starts, stops, moves to next node, etc.
+** [ ] [#A] Add a way to restrict number of loops when cycling
 ** [ ] Add a way to raise error and stop the runner. User should be able to try and continue the runner.
-** [ ] Add a way to restrict number of loops when cycling
-** [X] Stopping executor with ctrl+c during input and then starting it with /use does not stop at input, but retries last input node - verify
 * [ ] Configuration
-** [X] Add human-readable names to nodes
-** [X] Update templates and parametrize them via variables
 ** [ ] Add a way to fully disable know
 ** [ ] Figure out why confirmation override for discovery did not work
 ** [ ] Tweak architect prompts to not provide solution if there are questions to answer or user explicitly requests one shot solution
-** [ ] Tweak prompt for discovery to only work with existing files
+** [ ] [#A] Tweak prompt for discovery to only work with existing files
 ** [ ] Rewrite system prompt for analyst node
 Concrete example: files that were read and already in context.
+* [ ] UI protocol
+** [ ] Add syntax name hint to apply formatting
+* [ ] [#A] Nested workflows support
+** [ ] Create API to start a new workflow
+- Should start a new runner with new state
+- Wait for runner to finish
+- Pass all messages through to UI, plumb via parent runner
+- UIState should be smart enough to understand it's stacked execution. Need explicit messages to UIState on runner states, such as starting workflow execution, state changes, etc.
+** [ ] Create a tool that allows LLMs to call into new workflows
+** [ ] Create node that starts a workflow with an input
 * [ ] Error handling
 ** [ ] Add exception handlers
 *** [ ] Runner
@@ -36,94 +40,45 @@ Concrete example: files that were read and already in context.
 ** [ ] Running another workflow from workflow causes this error to be printed:
 Unclosed client session
 client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
-* [X] UI protocol
-** [ ] Add syntax name hint to apply formatting
 * [ ] Terminal UI
 ** [ ] Better visual separation of prompts vs responses
-** [X] Node transitions are printed out of order:
-** [X] Fix await
-** [X] Always show prompt. Add commands to stop/continue workflows
-** [X] When final message is printed, we need to add an extra linebreak. Also, validate streaming line splits with bottom toolbar - it seems to be broken.
-** [X] Streaming printing is broken with permanent toolbar visibility
-** [X] When prompt is requested, sometimes toolbar status is not updated
+** [ ] When final message is printed, we need to add an extra linebreak. Also, validate streaming line splits with bottom toolbar - it seems to be broken.
 ** [ ] Disable know warnings, they mess up UI output
 ** [ ] Animation does not always start after providing feedback message back to Node
-** [X] When LLM is waiting for response, need to show visual feedback to user
-** [X] Summarize tool calls for known tools. Create templates for tool calling that map parameters
-** [X] Ability to snoop into tool call details if needed, collapsed by default
 ** [ ] Better multi-line inputs, don't require esc+enter to send
 ** [ ] Show how long individual steps took, in seconds
-** [X] Continue after stopping shows prompt second time
 ** [ ] Continue after stopping does not show agent output upon response, but it's there
-** [X] When ctrl+c is pressed while waiting for user input and runner is stopped, need to cancel waiter.
-** [X] Add command to reload config without restart
-** [X] Add shortcuts to cancel current input easily
 ** [ ] Simple styling
-*** [X] Color usage
 *** [ ] Simple animations
-**** [X] Add three spaces to animation to prevent closing ] from animating
-**** [X] Ticker is not restarted after stopping for some reason or not always restarted
-*** [X] Remove Agent: prefix
-** [X] Print node transitions
 ** [ ] Format tool calls
-*** [X] JSON formatter and highlighter
 *** [ ] Add a way (tab?) to expand/collapse JSON
 *** [ ] Require all tool calls from LLM to have description (Key Objective)
-*** [X] Group related tool calls
-** [X] Assume markdown as default formatter
-** [X] Wrapped lines don't move caret down correctly - next line overwrites it.
-** [X] Disable input and drop buffered input between prompts
-** [X] ctrl+c when runner is active does nothing - should stop the runner (verify, might not be the case)
 ** [?] We might have deadlock somewhere that does not break with ctrl+c
 - Added debugging stacktraces for now
-** [X] Add file context management once corresponding node is created
-** [X] Add file and symbol auto-completes for a last word. Call into Know to do lookup and return most likely candidates. Maybe get complete file and symbol list from Know and create in-memory trigram index for quick lookups.
 ** [ ] Fix estimated cost calculation
-** [X] Highlighting does not work if ``` opener is not in the beginning of the line
 * [ ] Block parsers
 ** [ ] Diff parsers
-*** [X] Fix stats reporting - only report if file was fully patched in patched section
-*** [X] GPT V4A diff format
-**** [X] Better error reporting and verify apply patch cycle
-**** [X] When multiple chunks match, but we can't match any of the chunks - return all possible lines
-**** [X] Add support for multi-blocks where multiple things are getting deleted and added.
-**** [X] Add support for multiple patch blocks or provide better instructions
-**** [X] Better error instructions when blocks overlap
-**** [X] Allow same file to be mentioned multiple times?
-*** [X] Patch format
-**** [X] Fix error reporting when block can not be found
 *** [ ] Unified Diff format
 * [ ] Nodes
 ** [ ] Add a node that injects files in context. Add file manager.
-*** [X] Needs file auto-complete UI support
-*** [X] Show files added and removed, as well as current list of files for /fadd and /fdel
-*** [X] Figure out a way to inject files into patch without apply_patch having access to readfile
-*** [X] Add a way to manage context and inject files to context while looping in LLM node
 ** [ ] LLM node
-*** [X] Verify that injectors add to system prompt only once. Ensure that user prompt also only added once.
 *** [ ] Report tool token usage
 *** [ ] Report % token usage
 *** [ ] Add tool calling budgets (number of calls, tokens, etc)
 *** [ ] Detect tool call loops
-*** [X] Auto-retry on timeout
-*** [X] Auto-retry when throttled
 *** [ ] Add stats for the number of tokens in the context and context window limits
 *** [ ] Figure out why pricing estimates are all zeroes
-*** [X] Add a way to append text to default system prompt
-*** [X] Fix hallucinated tool calls and immediately return an error:
 ** [ ] Create RepoMap node - call into Know with provided prompt
 *** [ ] Also create preprocessor
-** [X] Create documentation node - read AGENT.md files for all paths that are mentioned in previous messages.
 ** [ ] Fan-out node - call other defined tools, collect their results and pass concatenated messages to next tool
 ** [ ] TODO node - collect plan that is formatted with specific syntax (markdown? function call?)
 * [ ] Tools
 ** [ ] Integrate Know
-*** [X] Add progress report
 *** [ ] Figure out how to express 3rd party dependencies and give access
 *** [ ] Disable warnings
+*** [ ] Add a way to fully disable know so project is not parsed.
 ** [ ] Add pattern matching rules to auto-approve rule calls
-
-** [ ] Skill
+** [ ] Skills
 *** [ ] Skill parsers
 *** [ ] Generate tool stubs for skills
 ** [ ] Shell tool
@@ -135,17 +90,9 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 *** [ ] Sandboxing
 ** [ ] Parallel tool calling support
 ** [ ] MCP tool support
-*** [ ] Pass cwd
+*** [ ] Ensure that cwd is passed correctly
 ** [ ] Add a way to reject tool calling automatically if tools with same parameters were already called
 ** [ ] Figure out sandboxing
 *** [ ] Wrap stdio MCP servers in sandbox
 *** [ ] Wrap shell tool in sandbox
 ** [ ] Apply patch tool - useful for fully-agentic loops
-* [ ] Nested workflows support
-** [ ] Create API to start a new workflow
-- Should start a new runner with new state
-- Wait for runner to finish
-- Pass all messages through to UI, plumb via parent runner
-- UIState should be smart enough to understand it's stacked execution. Need explicit messages to UIState on runner states, such as starting workflow execution, state changes, etc.
-** [ ] Create a tool that allows LLMs to call into new workflows
-** [ ] Create node that starts a workflow with an input
