--- a/todo.org
+++ b/todo.org
@@ -62,6 +62,8 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 * [ ] Nodes
 ** [ ] Add a node that injects files in context. Add file manager.
 ** [ ] LLM node
+*** [ ] If call does not have correct payload that's not JSON - should respond back with an error immediately
+Exception: Unable to convert openai tool calls={'role': 'assistant', 'content': "Of course. This is a classic state management and architectural problem. Let's analyze the three proposed approaches to creating stackable Runners.\n\nTo make the analysis more concrete, I will first search for the definitions of `Runner` and `UIState` to understand their current roles in the system.\n\n", 'tool_calls': [{'id': 'call_79eebc90de2b4b61ba97cc51bc7a', 'type': 'function', 'function': {'name': 'vectorops_search', 'arguments': '{"query": "Runner class", "kind": "class", "limit": 1}{"kind": "class", "query": "UIState class", "limit": 1}'}}]} to gemini tool calls. Received error=Extra data: line 1 column 55 (char 54)
 *** [ ] Report tool token usage
 *** [ ] Report % token usage
 *** [ ] Add tool calling budgets (number of calls, tokens, etc)
