--- a/todo.org
+++ b/todo.org
@@ -42,6 +42,7 @@ Concrete example: files that were read and already in context.
 Unclosed client session
 client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 * [ ] Terminal UI
+** [ ] Debug
 ** [ ] Figure out a way to avoid showing nested output for workflow (tool calls, etc)
 *** [ ] Add a hotkey to show collapsed output
 ** [ ] Better visual separation of prompts vs responses
@@ -61,6 +62,7 @@ client_session: <aiohttp.client.ClientSession object at 0x131801dc0>
 ** [ ] Fix estimated cost calculation
 * [ ] Block parsers
 ** [ ] Diff parsers
+*** [ ] Better error reporting for unmatched blocks. Currently it's too verbose.
 *** [ ] Unified Diff format
 * [ ] Nodes
 ** [ ] Add a node that injects files in context. Add file manager.
